Fix a rendering bug with the night order reminders
There was a bug on iPhones that stretched out the reminders. This commit
resolves that.

Fixes: #11

--- a/assets/scss/components/_character-reminder.scss
+++ b/assets/scss/components/_character-reminder.scss
@@ -73,6 +73,7 @@
     display: var(--night-order-display, flex);
     justify-content: center;
     align-items: center;
+    align-self: flex-start;
     font-size: clamp(0.75em, 3.5vw - 0.5em, 2em);
     line-height: 1;
     grid-area: 1 / -1;
